--- a/e9.css
+++ b/e9.css
@@ -1,74 +1,76 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
-@media screen and (max-width: 425px) {
-    width: 100%;
-  }
+
 header {
-    width: 100%;
-    height:50px;
-    background-color: #FF9A4B;
+  height: 50px;
+  background-color: #ff9a4b;
 }
+
 main {
-    width:100%px;
-    
+  width: 100%;
+  margin: 50px auto;
+  display: flex;
+  justify-content: center
 }
 
-.step {
-    display:flex;
-    justify-content: center;
+.step-box {
+  width: 300px;
+  position: relative;
+  background-color: #eee;
+  padding: 10px;
+  margin: 0px 15px;
+}
+.step-img1 {
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-position: bottom;
+  background-size: cover;
 }
 
-    
-.step1 {
-    width: 300px;
-    background-color: #EEEEEE;
-    margin:50px 0px;
-    background-image: url(flow01.png)
-}
-.step1-image {
-    height:150px;
-    width: 300px;
-    padding: 10px;
-    
-}
-.step2 {
-    width: 300px;
-    background-color: #EEEEEE;
-    margin:50px 30px;
-    background-image: url(flow02.png)
-}
-.step2-image {
-    height:150px;
-    width: 300px;
-    padding: 10px;
-}
-.step3 {
-    width: 300px;
-    background-color: #EEEEEE;
-    margin:50px 0px;
-    background-image: url(flow03.png)
-}
-.step3-image {
-    height:150px;
-    width: 300px;
-    padding: 10px;
-}
-.box {
-    position:absolute;
-    margin-right: 30px;
-    background-color:#FF9A4B;
-    top:100px;
+.step-img2 {
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-position: bottom;
+  background-size: cover;
 }
 
-h3 {
-    margin: 5px;
+.step-img3 {
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-position: bottom;
+  background-size: cover;
 }
-    
+
+.step-num {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ff9a4b;
+  color: #fff;
+}
+
+.title {
+  margin: 15px 0 5px;
+}
+@media screen and (max-width: 768px) {
+  .step-box {
+    width: 90%;
+    margin : 50px auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 footer {
-    width: 100%;
-    height: 50px;
-    background-color: #AAAAAA;
+  height: 50px;
+  background-color: #aaa;
 }
